# utlc-nbe-in-hs

./: CHANGELOG.md  LICENSE  utlc-nbe-in-hs.cabal  utlc-normalize-in-hs.cabal
app/: Context.hs  Eval.hs  Expr.hs  Normalize.hs
test/: Main.hs
