cabal-version:      2.4
name:               utlc-nbe-in-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             LittleJianCH
maintainer:         2447746158@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Expr, Context, Normalize
    other-modules:    Eval
    other-extensions: LambdaCase
    build-depends:    base ^>=4.14.3.0, containers ^>=0.6.5.1, MissingH ^>=1.5.0.1
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base, HUnit, utlc-nbe-in-hs
    default-language: Haskell2010